--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=desafio-votacao
+
+server.port=8080
+server.servlet.context-path=/api/votacao
+
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/postgres}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:root}
+spring.jpa.hibernate.ddl-auto=update
+
+#Configurações do flyway (está desativado por padrão).
+spring.flyway.enabled=false
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=false
+
+# limite máximo de uma sessão de votos em minutos (opcional)
+sessao.duracao-maxima-minutos=480
