--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=desafio-votacao
 
 server.port=8080
-server.servlet.context-path=/api/votacao
+server.servlet.context-path=/api/v1/votacao
 
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/postgres}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:root}
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 #Configurações do flyway (está desativado por padrão).
