desafio - desafio bonus fake cpf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.datasource.password=${DATABASE_PASSWORD:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-#Configurações do flyway (está desativado por padrão).
+#Configuracoes do flyway (esta desativado por padrao).
 spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=false
 
-# limite máximo de uma sessão de votos em minutos (opcional)
+# limite maximo de uma sessao de votos em minutos (opcional)
 sessao.duracao-maxima-minutos=480
